# glibmm

./: .clang-format  .cvsignore  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGES  ChangeLog  ChangeLog-ValueArrayTest  ChangeLog.local  MAINTAINERS  Makefile.am  NEWS  README  README.md  README.win32  README.win32.md  autogen.sh  configure.ac  configure.in  glibmm.doap  maemo_ignore_doxygen_tags.patch  meson.build  meson_options.txt
MSVC_NMake/giomm/: meson.build
MSVC_NMake/glibmm/: meson.build
docs/: Makefile.am  Makefile_web.am_fragment
docs/internal/: Makefile.am  using_gmmproc.txt
docs/reference/: .cvsignore  Doxyfile.in  Makefile.am  beautify_docs.pl  doxygen_to_devhelp.xsl  glibmm_header.html_fragment  libstdc++.tag.xml  meson.build
examples/: Makefile.am  Makefile.am_fragment  meson.build
examples/child_watch/: main.cc
examples/compose/: main.cc
examples/dbus/: busserver.cc  client.cc  client_bus_listnames.cc  meson.build  peer.cc  server.cc  server_without_bus.cc  session_bus_client.sh  session_bus_service.cc  userbus.cc  well-known-address-client.cc
examples/iochannel_stream/: Makefile.am  fdstream.cc  fdstream.h  main.cc  meson.build
examples/keyfile/: Makefile.am  example.ini  main.cc
examples/markup/: .cvsignore  meson.build  parser.cc
examples/network/: meson.build  resolver.cc  socket-client.cc  socket-server.cc
examples/network_io/: Makefile.am  resolve.cc
examples/options/: main.cc
examples/properties/: Makefile.am  meson.build  properties_example.cc
examples/regex/: main.cc
examples/settings/: meson.build  org.gtkmm.demo.gschema.xml  settings.cc
examples/subprocess/: main.cc
examples/thread/: .cvsignore  dispatcher.cc  dispatcher2.cc  meson.build  thread.cc  threadpool.cc
gio/: Makefile.am  giomm-2.4-uninstalled.pc.in  giomm-2.4.pc.in  giomm-uninstalled.pc.in  giomm.h  giomm.pc.in  giommconfig.h.in  giommconfig.h.meson  meson.build
gio/giomm/: Makefile.am  contenttype.cc  contenttype.h  filelist.am  filelist.gmake.am  init.cc  init.h  meson.build  slot_async.cc  slot_async.h  socketsource.cc  socketsource.h  tlsclientconnectionimpl.cc  tlsclientconnectionimpl.h  tlsserverconnectionimpl.cc  tlsserverconnectionimpl.h  wrap_init.h
gio/src/: Makefile.am  Makefile_list_of_hg.am_fragment  action.ccg  action.hg  actiongroup.ccg  actiongroup.hg  actionmap.ccg  actionmap.hg  appinfo.ccg  appinfo.hg  appinfomonitor.ccg  appinfomonitor.hg  applaunchcontext.ccg  applaunchcontext.hg  application.ccg  application.hg  applicationcommandline.ccg  applicationcommandline.hg  asyncinitable.ccg  asyncinitable.hg  asyncresult.ccg  asyncresult.hg  bufferedinputstream.ccg  bufferedinputstream.hg  bufferedoutputstream.ccg  bufferedoutputstream.hg  bytesicon.ccg  bytesicon.hg  cancellable.ccg  cancellable.hg  charsetconverter.ccg  charsetconverter.hg  converter.ccg  converter.hg  converterinputstream.ccg  converterinputstream.hg  converteroutputstream.ccg  converteroutputstream.hg  credentials.ccg  credentials.hg  (+275 more)
glib/: .cvsignore  Makefile.am  glibmm-2.4.pc.in  glibmm-uninstalled.pc.in  glibmm.h  glibmm.pc.in  glibmmconfig.h.in  glibmmconfig.h.meson  meson.build
glib/glibmm/: .cvsignore  Makefile.am  arrayhandle.cc  arrayhandle.h  base64.cc  base64.h  class.cc  class.h  containerhandle_shared.h  containers.cc  containers.h  debug.cc  debug.h  dispatcher.cc  dispatcher.h  environ.cc  environ.h  error.cc  error.h  exception.cc  exception.h  exceptionhandler.cc  exceptionhandler.h  extraclassinit.cc  extraclassinit.h  filelist.am  filelist.gmake.am  helperlist.h  i18n-lib.h  i18n.h  init.cc  init.h  interface.cc  interface.h  listhandle.h  main.cc  main.h  meson.build  miscutils.cc  miscutils.h  (+55 more)
glib/src/: .cvsignore  Makefile.am  Makefile_list_of_hg.am_fragment  balancedtree.ccg  balancedtree.hg  binding.ccg  binding.hg  btree.ccg  btree.hg  bytearray.ccg  bytearray.hg  bytes.ccg  bytes.hg  checksum.ccg  checksum.hg  convert.ccg  convert.hg  date.ccg  date.hg  datetime.ccg  datetime.hg  enums.ccg  enums.hg  filelist.am  fileutils.ccg  fileutils.hg  glib.defs  glib_deprecated_enums.defs  glib_deprecated_functions.defs  glib_docs.xml  glib_docs_override.xml  glib_enums.defs  glib_enums.defs.girpatch  glib_enums.defs.patch  glib_extra_objects.defs  glib_functions.defs  glib_functions.defs.patch  glib_signals.defs  glib_vfuncs.defs  gmodule_enums.defs  (+57 more)
tests/: Makefile.am  Makefile.am_fragment  meson.build
tests/giomm_asyncresult_sourceobject/: main.cc
tests/giomm_ioerror/: main.cc
tests/giomm_ioerror_and_iodbuserror/: main.cc
tests/giomm_listmodel/: main.cc
tests/giomm_memoryinputstream/: main.cc
tests/giomm_simple/: Makefile.am  giomm_simple.cc  main.cc
tests/giomm_stream_vfuncs/: main.cc
tests/giomm_tls_client/: main.cc
tests/glibmm_base64/: main.cc
tests/glibmm_binding/: main.cc
tests/glibmm_bool_arrayhandle/: main.cc
tests/glibmm_bool_vector/: main.cc
tests/glibmm_btree/: main.cc
tests/glibmm_buildfilename/: main.cc
tests/glibmm_bytearray/: main.cc
tests/glibmm_date/: Makefile.am  main.cc
tests/glibmm_environ/: main.cc
tests/glibmm_interface_implementation/: main.cc
tests/glibmm_interface_move/: main.cc
tests/glibmm_mainloop/: main.cc
tests/glibmm_nodetree/: main.cc
tests/glibmm_null_containerhandle/: main.cc
tests/glibmm_null_vectorutils/: main.cc
tests/glibmm_object/: main.cc  test_derived_object.h
tests/glibmm_object_move/: main.cc
tests/glibmm_objectbase/: main.cc  test_derived_objectbase.h
tests/glibmm_objectbase_move/: main.cc
tests/glibmm_refptr/: main.cc
tests/glibmm_refptr_sigc_bind/: main.cc
tests/glibmm_regex/: main.cc
tests/glibmm_streams/: main.cc
tests/glibmm_tree/: main.cc
tests/glibmm_ustring_compare/: main.cc
tests/glibmm_ustring_compose/: main.cc
tests/glibmm_ustring_format/: main.cc
tests/glibmm_ustring_hash/: main.cc
tests/glibmm_ustring_make_valid/: main.cc
tools/: .cvsignore  Makefile.am  Makefile.am.proper  defs_fixer.pl  docextract_to_xml.pl  enum.pl  generate_wrap_init.pl.in  gmmproc.in  gtkmmproc.in  meson.build  wrap_output.py
(+630 files in other folders)
